feat: update description

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="Fitness Accountability Dashboard" />
+    <meta property="og:title" content="Fitness Accountability" />
     <meta property="og:description" content="Stay accountable with your fitness goals — track, log, and push yourself each week!" />
     <meta property="og:image" content="%PUBLIC_URL%/DUT.png" />
     <meta property="og:url" content="https://fintess-accountability.vercel.app/" />
