--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Fitness Accountability" />
     <meta property="og:description" content="Stay accountable with your fitness goals — track, log, and push yourself each week!" />
-    <meta property="og:image" content="%PUBLIC_URL%/DUT.png" />
+    <meta property="og:image" content="https://fintess-accountability.vercel.app/DUT.png" />
     <meta property="og:url" content="https://fintess-accountability.vercel.app/" />
     <meta name="twitter:card" content="summary_large_image" />
 
